--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "syncfg",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "type": "module",
   "description": "The Simplest way to store variables in configuration files",
   "main": "index.js",
@@ -12,16 +12,28 @@
     "url": "git+ssh://git@github.com/glazs/syncfg.git"
   },
   "keywords": [
+    "configuration management",
+    "config file",
+    "localstorage alternative",
+    "node.js storage",
+    "automatic serialization",
+    "api keys storage",
+    "es6 proxy",
+    "file synchronization",
+    "data persistence",
+    "node.js settings",
+    "json storage",
+    "config manager",
+    "node.js config",
+    "file-based storage",
+    "node.js persistence",
+    "settings management",
     "localStorage",
     "config",
     "proxy",
     "storage",
-    "file",
-    "sync",
-    "sync",
-    "config",
-    "config",
-    "file"
+    "file sync",
+    "sync config"
   ],
   "author": "Eugene Glazyrin",
   "license": "ISC",
